# django-render

./: build.sh  pyproject.toml  render.yaml
api/: urls.py  views.py
mysite/: settings.py  urls.py
