[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Chris Babiak <chrisbabiak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.0.8"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
gunicorn = "^20.0.4"
requests = "^2.28.1"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
